--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,11 @@ name: Build and Push Docker Image
 
 on:
   push:
+    branches: [ main ]
     tags:
       - 'v*.*.*'
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
@@ -47,6 +50,7 @@ jobs:
           docker build -t us-central1-docker.pkg.dev/milestone1-mlops/milestone1-repo/milestone2-service:${{ github.ref_name }} .
 
       - name: Push Docker image
+        if: startsWith(github.ref, 'refs/tags/')
         run: |
           docker push us-central1-docker.pkg.dev/milestone1-mlops/milestone1-repo/milestone2-service:${{ github.ref_name }}
 
